Added content types to section content and a pdf viewer.

--- a/app/views/sections/_tab_navigation.html.erb
+++ b/app/views/sections/_tab_navigation.html.erb
@@ -7,7 +7,7 @@
   <div>
     <ul class="tabs">
       <li <% if @mode == "instructions" %> class="active" <% end %>>
-        <%= link_to "Instructions", edit_section_path(@section.id, :m => "instructions") %>
+        <%= link_to "Content", edit_section_path(@section.id, :m => "instructions") %>
       </li>
       <li <% if @mode == "tasks" %> class="active" <% end %>>
         <%= link_to "Tasks", edit_section_path(@section.id, :m => "tasks") %>
