--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -1,21 +1,28 @@
 <%= render "tab_navigation" %>
 <%= form_tag({:controller => :sections, :action => :reorder_tasks}, :method => :put) %>
 <section class="tab_content">
-	<div style="float: right; margin-bottom:10px;">
-    <% if @reorder %>
-      <%= link_to "Randomize", edit_section_path(@section.id, :m => "randomize"), :class => "btn primary" %>
-      <%= submit_tag "Save", :class => "btn primary" %>
-      <%= link_to "Cancel", edit_section_path(@section.id, :m => "tasks"), :class=> "btn secondary" %>
-    <% else %>
-      <%= link_to "New Task", new_task_path(:section_id => @section.id), :class=>"btn primary" %>
-      <%= link_to "Reorder", edit_section_path(@section.id, :m => "tasks", :a => "reorder"), :class=>"btn secondary" %>
-      <%= link_to "Generate", questions_section_path(@section), :class=>"btn secondary" %>
-    <% end %>
-	</div>
 	<% if @tasks.empty? %>
-		<p style="padding:25px;">You have not yet created any tasks for this Path. You can start by helping Moonlite 
-    <%= link_to "generating questions for you", questions_section_path(@section) %>.</p>
+  <div style="padding: 20px;">
+		<p><strong>Tasks</strong> are used to verify someone's <strong>progress</strong> through a section. A task can be something the user must do or a picture they must identify, or simply a multiple choice question.</p>
+    <p>You have not created any tasks for this Path yet. You can get started by:</p>
+    <ul>
+      <li style="padding:5px;">Creating a <%= link_to "new task manually", new_task_path(:section_id => @section) %>.</li>
+      <li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "your section content", questions_section_path(@section) %>.</li>
+      <li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "text outside of your section content", edit_section_path(@section, :m => "hidden_content") %>.</li>
+    </ul>
+  </div>
 	<% else %>
+  <div style="float: right; margin-bottom:10px;">
+  <% if @reorder %>
+    <%= link_to "Randomize", edit_section_path(@section.id, :m => "randomize"), :class => "btn primary" %>
+    <%= submit_tag "Save", :class => "btn primary" %>
+    <%= link_to "Cancel", edit_section_path(@section.id, :m => "tasks"), :class=> "btn secondary" %>
+  <% else %>
+    <%= link_to "New Task", new_task_path(:section_id => @section.id), :class=>"btn primary" %>
+    <%= link_to "Reorder", edit_section_path(@section.id, :m => "tasks", :a => "reorder"), :class=>"btn secondary" %>
+    <%= link_to "Generate", questions_section_path(@section), :class=>"btn secondary" %>
+  <% end %>
+	</div>
 		<table>
 		<% @tasks.each do |t| %>
 			<tr class="task"><td>	
