--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,5 @@
 <section style="float:left; margin-right: 60px;">
-	<img src="/images/logo.png" width="200" height="250"/>
+	<img src="https://s3-us-west-1.amazonaws.com/moonlite/static/logo.png" width="200" height="250"/>
 </section>
 <section>
   <h2>What do your employees know? What skills do they have?</h2>
