--- a/app/views/tasks/task_form.html.erb
+++ b/app/views/tasks/task_form.html.erb
@@ -61,7 +61,7 @@ $(function(){
       <div class="field clearfix">
         <%= f.label "Resource" %>
         <div class="input">
-          <%= image_tag(@info_resource.link, :width => "100") %>
+          <%= image_tag(@info_resource.obj.url, :width => "100") %>
         </div>
       </div>
       <% end %>
