Added facebook integration and fixed S3 dev credentials bug.

--- a/app/views/paths/_facebook_like.html.erb
+++ b/app/views/paths/_facebook_like.html.erb
@@ -7,3 +7,9 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+<script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
+<fb:comments></fb:comments>
+<script type="text/javascript">
+FB.init("276612745757646", "<path from web root>/xd_receiver.htm");
+</script>
