Fixed facebook plugin.

--- a/app/views/paths/_facebook_like.html.erb
+++ b/app/views/paths/_facebook_like.html.erb
@@ -1,15 +1,1 @@
-<div style="margin: 20px 0px 20px 0px;" class="fb-like" data-send="true" data-width="450" data-show-faces="true"></div>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-<script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
-<fb:comments></fb:comments>
-<script type="text/javascript">
-FB.init("276612745757646", "<path from web root>/xd_receiver.htm");
-</script>
+<div class="fb-comments" data-href="http://www.projectmoonlite.com/paths/19" data-num-posts="10" data-width="600"></div>
