--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -50,11 +50,11 @@
 					<% if @categories.empty? %>
 					<p>You have not created any Path categories yet for your company.</p>
 					<% else %>
-					<ul>
-					<% @categories.each do |c| %>
-						<li><%= c.name %></li>
-					<% end %>
-					</ul>
+					<ol class="inputs-list">
+						<% @categories.each do |c| %>
+						<li><%= c.name %> - <%= link_to "Delete", c, :method => :delete, :confirm => "You sure?", :title => "Delete Category" %></li>
+						<% end %>
+					</ol>
 					<% end %>
 					<%= link_to "Add a Path category", new_category_path, :class => "btn secondary" %>
 				</div>
