--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,18 @@
+<style>
+#top_nav_bar {
+	font-size: 15px;
+	padding-top:4px;
+}
+</style>
 <header>
 	<nav class="topbar" data-scollspy="scrollspy" data-dropdown="dropdown">
 		<div class="fill">
 			<div class="container">
-				<h3><a href="/">Moonlite</a></h3>
+				<h3><a style="font-size: 26px;" href="/">bright<sub>e</sub>st</a></h3>
 				<% if signed_in? %>
-				<ul>
-					<li><%= link_to "Explore", explore_path %></li>
-          <li><%= link_to "Create", new_path_path %></li>
+				<ul id="top_nav_bar">
+					<li><%= link_to "Browse", explore_path %></li>
+          <li><%= link_to "Create", create_path %></li>
 					<li>
             <a href="<%= user_url(current_user) %>">
               <%= image_tag current_user.profile_pic, :size => "18x18", :style => "display:inline; float:left; margin-right: 5px;" %>
@@ -27,7 +33,7 @@
           <% end %>
 				</ul>
 				<% end %>
-				<ul class="nav secondary-nav">
+				<ul class="nav secondary-nav" id="top_nav_bar">
 					<% if signed_in? %>
             <% if current_user.company.enable_tour %>
             <li>
