--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -5,20 +5,20 @@
 		<%= submit_tag "Search", :class => "btn primary" %>
 	<% end %>
 	</div>
-	<div><a><h1>Explore Moonlite</h1></a></div>
+	<div><a><h1>Browse Challenges</h1></a></div>
 </section>
 <section id="path_explore">
-  <% @path_sections.each do |paths| %>
-    <% path_name = paths[0] %>
-    <% all_paths = paths[1] %>
+  <% @path_categories.each do |c| %>
+    <% category = c[0] %>
+    <% all_paths = c[1] %>
     <% if !@query.nil? %>
       <p>Your search for <strong><%= @query %></strong> returned <%= all_paths.size.to_s %> results.</p>
     <% else %>
     <hr/>
     <div class="row" style="padding-left: 20px;">
-      <h2><%= path_name %></h2>
+      <h2><%= category.name %></h2>
       <% if @display_all %>
-        <%= link_to "View All", explore_path(:m => path_name), :style=> "float: right; padding-top: 10px;" %>
+        <%= link_to "View All", explore_path(:c => category.id), :style=> "float: right; padding-top: 10px;" %>
       <% end %>
     </div>
     <% end %>
