--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <section style="margin-bottom:20px">
- <h2 style="margin-bottom: 15px;">My Paths</h2>
+ <h1 style="margin-bottom: 15px;">My Challenges</h1>
 <% if @enrolled_paths.empty? && @completed_paths.empty? %>
   <p>You are not currently enrolled in any paths.</p>
   <%= link_to "Get started!", explore_path, :class => "btn primary" %>
