--- a/app/views/paths/_enrolled_users.html.erb
+++ b/app/views/paths/_enrolled_users.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h3>Enrolled Users</h3>
   <% if users.empty? %>
-  <p>Be the first to enroll in this path!</p>
+  <p>Be the first to take this challenge!</p>
   <% else %>
     <ul class="media-grid">
     <% users.each do |u| %>
