--- a/app/views/paths/_tab_navigation.html.erb
+++ b/app/views/paths/_tab_navigation.html.erb
@@ -1,6 +1,6 @@
 <section class="tab_header">
   <div>
-    <h4 style="margin-top:-15px;">Path Builder</h4>
+    <h4 style="margin-top:-15px;">Challenge Builder</h4>
     <%= image_tag @path.path_pic %>
     <h1><%= @path.name %></h1>
   </div>
@@ -16,7 +16,7 @@
         <%= link_to "Settings", edit_path_path(@path.id, :m=>"settings") %>
       </li>
       <li style="float:right;">
-        <%= link_to "View Path", @path, :style => "background-color:whitesmoke;" %>
+        <%= link_to "View Challenge", @path, :style => "background-color:whitesmoke;" %>
       </li>
     </ul>
   </div>
