--- a/app/views/paths/_unenroll.html.erb
+++ b/app/views/paths/_unenroll.html.erb
@@ -2,6 +2,6 @@
 		:html => { :method => :delete } do |f| %>
 	<%= f.hidden_field :path_id %>
 	<div class="actions">
-		<%= f.submit "Leave Path", :class=> "btn primary" %>
+		<%= f.submit "Leave Challenge", :class=> "btn primary" %>
 	</div>
 <% end %>
