--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -23,21 +23,42 @@
       <div class="description"><%= @path.description.html_safe %></div>
     </div>
 	</div>
-  <hr/>
 	<%= render "path_sections", { :sections => @sections } %>
-  <hr/>
-  <% unless @achievements.empty? %>
-    <%= render "unlockable_achievements", { :achievements => @achievements } %>
-    <hr/>
-  <% end %>
-  <%= render "enrolled_users", { :users => @enrolled_users } %>
+	<section class="tab_header">
+  <div>
+    <h3>Leaderboards</h4>
+  </div>
+  <div>
+		<script>
+		$(function (){
+			$("#leaderboard_overall").show().addClass("active_board");
+		});
+		
+		function change_leaderboard(new_board_id){
+			var old_board_id = $(".active_board").attr("id").replace("leaderboard_","");
+			$(".active_board").hide().removeClass("active_board");
+			$("#leaderboard_"+new_board_id).show().addClass("active_board");
+			$("#leaderboard_header_"+old_board_id).removeClass("active");
+			$("#leaderboard_header_"+new_board_id).addClass("active");
+		}
+		</script>
+    <ul class="tabs">
+      <li class="active" id="leaderboard_header_overall"><a onclick="change_leaderboard('overall')">Overall</a></li>
+      <% @sections.each do |s| %>
+			<li id="leaderboard_header_<%= s.id.to_s %>"><a onclick="change_leaderboard('<%= s.id.to_s %>')"><%= s.name %></a></li>
+			<% end %>
+    </ul>
+  </div>
+	<% @leaderboards.each do |l| %>
+		<%= render "leaderboards/leaderboard", {:leaderboard_id => l[0], :leaderboard_entries => l[1]} %>
+	<% end %>
   <%= render "facebook_like" %>
 	<% if current_user.company_admin? %>
   <div class="actions">
     <% unless @path.is_published %>
       <%= link_to "Publish", edit_path_path(@path, :m => "settings"), :class => "btn primary" %>
     <% end %>
-    <%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this path?", :class => "btn secondary" %>
+    <%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this challenge?", :class => "btn secondary" %>
     <%= link_to "Edit", {:controller => "paths", :action => "edit", :id => @path.id }, :class => "btn secondary" %>
   <% end %>
   </div>
