Added feature customizability and fixed facebook comments.?

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -20,7 +20,7 @@
 						<li>
 							<label>
 								<%= f.check_box :enable_company_store %>
-								<span>Enable Company Store</span>
+								<span>Enable Rewards</span>
 							</label>
 						</li>
             <li>
@@ -39,6 +39,48 @@
 							<label>
 								<%= f.check_box :enable_tour %>
 								<span>Enable Tour</span>
+							</label>
+						</li>            
+						<li>
+							<label>
+								<%= f.check_box :enable_browsing %>
+								<span>Enable challenge browsing</span>
+							</label>
+						</li>            
+						<li>
+							<label>
+								<%= f.check_box :enable_comments %>
+								<span>Enable comments on challenges</span>
+							</label>
+						</li>            
+						<li>
+							<label>
+								<%= f.check_box :enable_news %>
+								<span>Enable news feed</span>
+							</label>
+						</li>            
+						<li>
+							<label>
+								<%= f.check_box :enable_feedback %>
+								<span>Enable feedback on questions</span>
+							</label>
+						</li>            
+						<li>
+							<label>
+								<%= f.check_box :enable_achievements %>
+								<span>Enable achievements</span>
+							</label>
+						</li>						
+						<li>
+							<label>
+								<%= f.check_box :enable_recommendations %>
+								<span>Enable challenge recommendations</span>
+							</label>
+						</li>
+						<li>
+							<label>
+								<%= f.check_box :enable_user_creation %>
+								<span>Enable non-admin user content creation</span>
 							</label>
 						</li>
 					</ul>
