--- a/app/views/mailer/welcome.html.erb
+++ b/app/views/mailer/welcome.html.erb
@@ -1,4 +1,2 @@
-Hi <%= @user_email %>,
-
-<p>Your company administrator invited you to Project Moonlite. To finish your registration, visit the link below:</p>
+<p>Your company administrator invited you to Moonlite, a new online learning management and certification tool. To finish your registration, visit the link below:</p>
 <p><a href="<%= @accept_url %>"><%= @accept_url %></a></p>
