--- a/app/views/paths/_facebook_like.html.erb
+++ b/app/views/paths/_facebook_like.html.erb
@@ -1,1 +1,1 @@
-<div class="fb-comments" data-href="http://www.projectmoonlite.com/paths/19" data-num-posts="10" data-width="600"></div>
+<div class="fb-comments" data-href="<%= path_url(@path) %>" data-num-posts="10" data-width="600"></div>
