--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,11 +1,86 @@
 <h1>Company Registration</h1>
 <%= form_for(@company) do |f| %>
-	<%= render 'shared/error_messages', :object => f.object %>
-	<div class="field">
-		<%= f.label :name %><br/>
-		<%= f.text_field :name %>
+	<%= render "shared/error_messages", :object => f.object %>
+	<div class="clearfix field">
+		<%= f.label :name %>
+		<div class="input">
+			<%= f.text_field :name %>
+		</div>
+	</div>
+	<div class="clearfix field">
+		<%= f.label "Admin Email" %>
+		<div class="input">
+			<%= f.text_field :admin_email %>
+		</div>
+	</div>
+	<div class="field clearfix">
+		<label>Settings</label>
+		<div class="input">
+			<ul class="inputs-list">
+				<li>
+					<label>
+						<%= f.check_box :enable_company_store %>
+						<span>Enable Rewards</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_leaderboard %>
+						<span>Enable Leaderboard</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_dashboard %>
+						<span>Enable Dashboard</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_tour %>
+						<span>Enable Tour</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_browsing %>
+						<span>Enable challenge browsing</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_comments %>
+						<span>Enable comments on challenges</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_news %>
+						<span>Enable news feed</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_feedback %>
+						<span>Enable feedback on questions</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_achievements %>
+						<span>Enable achievements</span>
+					</label>
+				</li>						
+				<li>
+					<label>
+						<%= f.check_box :enable_recommendations %>
+						<span>Enable challenge recommendations</span>
+					</label>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Sign up" %>
+		<%= f.submit "Create", :class => "btn primary" %>
 	</div>
 <% end %>
