--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -33,7 +33,10 @@
 .task .correct { color: green; font-weight: bold; }
 .task .answer label { font-size: 17px; margin-top: 10px; }
 .task-comments {   background-color:#f5f5f5; display:block; padding:8.5px; margin:0 0 18px; line-height:18px; font-size:12px; border:1px solid #ccc; border:1px solid rgba(0, 0, 0, 0.15); -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px; white-space:pre; white-space:pre-wrap; word-wrap:break-word; }
-	
+
+/* Header */
+.top_nav_bar { font-size: 15px; padding-top:4px; }
+
 /* Footer */
 footer { text-align: center; margin-top: 100px; margin-left: auto; margin-right: auto; } 
 footer nav { float: none; }
