--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -5,7 +5,7 @@
 		<%= submit_tag "Search", :class => "btn primary" %>
 	<% end %>
 	</div>
-	<div><a><h1>Browse Challenges</h1></a></div>
+	<div><a><h1><%= company_logo %> Challenges</h1></a></div>
 </section>
 <section id="path_explore">
   <% @path_categories.each do |c| %>
