--- a/app/views/reports/dashboard.html.erb
+++ b/app/views/reports/dashboard.html.erb
@@ -167,7 +167,7 @@
 		</table>
 	</section>
 	<section>
-		<h2>Path Statistics</h2>
+		<h2>Challenge Statistics</h2>
 		<ul>
 			<% path_counter = 0 %>
 			<% @path_statistics.each do |p| %>
