--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -34,12 +34,26 @@
 						<%= f.check_box :is_published, :confirm => "This will publish the challenge so all users in your account can access it. Are you sure you want to publish this now?" %>
 						<span>Publish this challenge to your Moonlite account.</span>
 					</label>
+				</li>
+				<li>
 					<label>
 						<%= f.check_box :is_public, :confirm => "This will publish the challenge so all users in your account can access it. Are you sure you want to publish this now?" %>
 						<span>Allow users to post this challenge to their public profile</span>
 					</label>
 				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_section_display %>
+						<span>Display section previews on the main challenge page</span>
+					</label>
+				</li>
+				<li>
+				</li>
 			</ul>
+		</div>
+		<%= f.label "Question Timer (secs)" %>
+		<div class="input">
+			<%= f.text_field :default_timer %>
 		</div>
 	</div>
   <hr/>
